--- a/package.json
+++ b/package.json
@@ -8,10 +8,28 @@
     "@rails/webpacker": "5.4.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+
+    "@babel/core": "^7.22.6",
+    "@babel/plugin-transform-class-properties": "^7.18.6",
+    "@babel/plugin-transform-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
+    "@babel/plugin-transform-private-methods": "7.24.6",
+    "@babel/plugin-transform-runtime": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-react": "^7.22.5"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+
+    "@babel/core": "^7.22.6",
+    "@babel/plugin-transform-class-properties": "^7.18.6",
+    "@babel/plugin-transform-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
+    "@babel/plugin-transform-private-methods": "7.24.6",
+    "@babel/plugin-transform-runtime": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-react": "^7.22.5"
   }
 }
